# pygsi

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
example/: README.md  capture.py  example.py  gamestate_integration_pygsi.cfg  simple.py
src/pygsi/: __init__.py  _payload.py  models.py  server.py
tests/: conftest.py  fixtures.json  test_integration.py
